--- a/codes/02.few-shot.ipynb
+++ b/codes/02.few-shot.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Few-Shot"
+    "## Few-Shot\n",
+    "- 몇 가지 예제로 작업 패턴 제공\n",
+    "- 질의 응답, 감정 분석"
    ]
   },
   {
