--- a/codes/01.zero-shot.ipynb
+++ b/codes/01.zero-shot.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "### Zero-Shot\n",
-    "- 예제 없이 질문"
+    "- 예제 없이 질문\n",
+    "- 간단한 질문, 텍스트 요약, 요약"
    ]
   },
   {
@@ -21,14 +22,236 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openai\n",
+      "  Downloading openai-1.59.8-py3-none-any.whl (455 kB)\n",
+      "\u001b[K     |████████████████████████████████| 455 kB 16.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.8/dist-packages (from openai) (4.5.2)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.8/dist-packages (from openai) (4.12.2)\n",
+      "Collecting jiter<1,>=0.4.0\n",
+      "  Downloading jiter-0.8.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (338 kB)\n",
+      "\u001b[K     |████████████████████████████████| 338 kB 74.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting httpx<1,>=0.23.0\n",
+      "  Downloading httpx-0.28.1-py3-none-any.whl (73 kB)\n",
+      "\u001b[K     |████████████████████████████████| 73 kB 2.1 MB/s  eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from openai) (2.10.1)\n",
+      "Requirement already satisfied: sniffio in /usr/local/lib/python3.8/dist-packages (from openai) (1.3.1)\n",
+      "Collecting tqdm>4\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "\u001b[K     |████████████████████████████████| 78 kB 6.1 MB/s  eta 0:00:01\n",
+      "\u001b[?25hCollecting distro<2,>=1.7.0\n",
+      "  Downloading distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.8/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2; python_version < \"3.11\" in /usr/local/lib/python3.8/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+      "Collecting certifi\n",
+      "  Downloading certifi-2024.12.14-py3-none-any.whl (164 kB)\n",
+      "\u001b[K     |████████████████████████████████| 164 kB 62.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting httpcore==1.*\n",
+      "  Downloading httpcore-1.0.7-py3-none-any.whl (78 kB)\n",
+      "\u001b[K     |████████████████████████████████| 78 kB 6.3 MB/s  eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pydantic-core==2.27.1 in /usr/local/lib/python3.8/dist-packages (from pydantic<3,>=1.9.0->openai) (2.27.1)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.8/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.8/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Installing collected packages: jiter, certifi, httpcore, httpx, tqdm, distro, openai\n",
+      "Successfully installed certifi-2024.12.14 distro-1.9.0 httpcore-1.0.7 httpx-0.28.1 jiter-0.8.2 openai-1.59.8 tqdm-4.67.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "\n",
+    "import os\n",
+    "os.environ['OPENAI_API_KEY'] = ''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI()\n",
+    "\n",
+    "message = [\n",
+    "    {\n",
+    "      \"role\": \"user\",\n",
+    "      \"content\": [\n",
+    "        {\n",
+    "          \"type\": \"text\",\n",
+    "          \"text\": \"긍정 또는 부정으로 답변을 작성하세요.\\nQ: 매력적인 이성과 사랑에 빠졌어!\\nA:\"\n",
+    "        }\n",
+    "      ]\n",
+    "    }\n",
+    "  ]\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "  model=\"gpt-4o-mini\",\n",
+    "  messages = message,\n",
+    "  response_format={\n",
+    "    \"type\": \"text\"\n",
+    "  },\n",
+    "  temperature=1,\n",
+    "  max_completion_tokens=10000,\n",
+    "  top_p=0.5,\n",
+    "  frequency_penalty=0.2,\n",
+    "  presence_penalty=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(openai.types.chat.chat_completion.ChatCompletion,\n",
+       " ChatCompletion(id='chatcmpl-ArgbadHCgapfYLZVROROOv37lEHhh', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='긍정!', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None))], created=1737358522, model='gpt-4o-mini-2024-07-18', object='chat.completion', service_tier='default', system_fingerprint='fp_72ed7ab54c', usage=CompletionUsage(completion_tokens=5, prompt_tokens=35, total_tokens=40, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0))))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(response), response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='긍정!', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None))],\n",
+       " list,\n",
+       " 1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.choices, type(response.choices),len(response.choices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "openai.types.chat.chat_completion.Choice"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(response.choices[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "openai.types.chat.chat_completion_message.ChatCompletionMessage"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(response.choices[0].message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('긍정!', 'assistant')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 실제 답변과 역활 가져오기\n",
+    "response.choices[0].message.content,response.choices[0].message.role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
